# build-your-pc-group-project

./: .gitignore  README.md  config.toml  flake.nix  pyproject.toml
build-your-pc/: main.py  util.py
build-your-pc/auth/: __init__.py
build-your-pc/migrations/: __init__.py
build-your-pc/migrations/scripts/: 01create_users_table.py  02_create_components.py  02create_tokens.py  03create_partlist.py  04rename_to_singular.py
build-your-pc/templates/: auth.html  base.html  index.html  parts.html  register.html
build-your-pc/templates/auth/: auth.html
build-your-pc/templates/part-picker/: parts-dashboard.html  parts-list.html
static/: global.css
static/css/: general.css  global.css  queries.css  style.css
static/img/: pc_main.avif
static/js/: auth.js  front-end-func.js  parts.js  script.js
