[tool.poetry]
name = "build-your-pc"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
  { include = "build-your-pc" }
]

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.19.4"
jsonschema = "^4.21.1"
aiosqlite = "^0.20.0"
argon2-cffi = "^23.1.0"

[tool.poetry.dev-dependencies]
python = "^3.11"
ruff = "^0.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
